# scr

./: Dockerfile  Dockerfile.heroku  Makefile  Notes.txt  README.md  docker-compose.yml  heroku.yml  pyproject.toml  requirements.txt
script/: .dockerignore  .flake8  manage.py
script/home/static/css/: welcome_page.css
script/home/templates/home/: home_page.html  welcome_page.html
script/script/: urls.py  wsgi.py
script/script/settings/: base.py  dev.py  logging.py  production.py
script/script/static/css/: script.css
script/script/templates/: base.html  snippet_header.html
